tests/errors/missing_function_param_semicolon.drast
// # TEST: function parameter requires semicolon before type
// # EXPECT: error
// # ERROR_CONTAINS: expected param semicolon

add value int, int
	return value
